--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "probe-mon",
-  "version": "0.0.5",
-  "description": "Express middleware to probe latency in your endpoints. ",
-  "main": "probe.js",
-  "scripts": {
-    "test": "sh test/test.sh"
-  },
-  "author": "cvaldezrx@gmail.com",
-  "license": "MIT",
-  "devDependencies": {
-    "express": "^4.15.2"
-  }
+    "name": "probe-mon",
+    "version": "0.0.6",
+    "description": "Express middleware to probe latency in your endpoints. ",
+    "main": "probe.js",
+    "scripts": {
+        "test": "sh test/test.sh"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cesarvr/probe"
+    },
+    "author": "cvaldezrx@gmail.com",
+    "license": "MIT",
+    "devDependencies": {
+        "express": "^4.15.2"
+    }
 }
